# Stem2Tab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.cpu.yml  docker-compose.yml
.agent/rules/: development-rules.md
.cursor/rules/: development-rules.mdc
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/scripts/: install_basic_pitch.sh
backend/src/api/: main.py  schemas.py
backend/src/core/: config.py
backend/src/evaluation/: __init__.py  adapters.py  benchmark.py  io.py  metrics.py  models.py  preview.py  reporting.py
backend/src/pipelines/: demucs_loader.py  separation.py  tab.py  transcription.py
backend/src/worker/: app.py  tasks.py
backend/tests/integration/: test_smoke_pipeline.py  test_transcription.py
backend/tests/unit/: test_evaluation_adapters.py  test_evaluation_benchmark.py  test_evaluation_metrics.py  test_evaluation_models_io.py  test_evaluation_preview.py  test_health.py  test_jobs_api.py  test_worker_tasks.py
docs/: API.md  ARCHITECTURE.md  DATAFLOW.md  DEMO_MODE.md  DEPENDENCIES.md  DEVELOPMENT_RULES.md  FEATURES.md  IMPLEMENTATION.md  INFRASTRUCTURE.md  ROADMAP.md  TECH_RESEARCH.md  TESTING.md  current_status_20251208.md
fixtures/golden/: basic_pitch.json
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/alphatab/: alphaTab.min.js  alphaTab.min.mjs  alphaTab.mjs  alphaTab.worker.min.mjs  alphaTab.worker.mjs  alphaTab.worklet.mjs
frontend/public/assets/: alphaTab.core.min.mjs  alphaTab.core.mjs  alphaTab.d.ts  alphaTab.js  alphaTab.worklet.min.mjs
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/components/: AlphaTabViewer.tsx  Fretboard.tsx
frontend/src/hooks/: useJobPolling.ts
frontend/src/pages/: Demo.tsx  Upload.tsx
refs/: memo.md
(+2 files in other folders)
